Authentication (JWT), Authorization (Roles), Secured APIs done.